Quorum/Library/Tests/Actions/Pass/Return2ActionsBoolToVar.quorum
class Main
    action Main
        boolean a = true
        boolean x = true
        x = bar(foo(a))
        output x
    end

    action foo (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end

    action bar (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end
end