Quorum/Library/Tests/Actions/Fail/MissingReturn11.quorum
class Main
    boolean leave = true
    action Main
        if leave
            return
        end
        output "made it"
    end
end